--- a/src/app/contact/contact.component.html
+++ b/src/app/contact/contact.component.html
@@ -7,7 +7,7 @@
   </p>
   <a href="https://api.whatsapp.com/send?phone=+385914182000" title="WhatsApp"><i class="fab fa-whatsapp w3-margin-right largetext"></i></a>
   <a href="viber://chat?number=%2B385914182000" title="Viber"><i class="fab fa-viber w3-margin-right largetext"></i></a>
-  <a href="https://www.facebook.com/profile.php?id=1165940456" title="Facebook"><i class="fab fa-facebook w3-margin-right largetext"></i></a>
+  <a href="https://m.me/1165940456" title="Messenger"><i class="fab fa-facebook-messenger w3-margin-right largetext"></i></a>
   <a href="https://www.instagram.com/dubinsko_ciscenje_damawash/" title="Instagram"><i class="fab fa-instagram largetext"></i></a>
   <p style="margin-top:10px;margin-bottom: 20px;font-weight: bold;"  class="w3-large">
     <a href="mailto:info.damawash@gmail.com" title="E-mail"><i class="fas fa-envelope"></i> info.damawash@gmail.com</a>
