--- a/src/app/naslovna/naslovna.component.html
+++ b/src/app/naslovna/naslovna.component.html
@@ -16,36 +16,16 @@
         <!--<span style="font-size: larger;padding:10px">Nudimo profesionalne usluge čišćenja koje obavljamo koristeći najmodernije strojeve i ekološka sredstva za čišćenje.</span>-->
         <span style="font-size: larger;padding:10px">Naše usluge dostupne su 7 dana u tjednu  privatnim i poslovnim klijentima u Rijeci i okolici, a po potrebi i dalje.</span>
         <br>
-        <p style="margin-top:10px;margin-bottom: 0px;font-weight: bold;"><a href="tel:+385914182000"><i class="fas fa-mobile-alt"></i> 091 418 2000</a></p>
+        <p style="margin-top:10px;margin-bottom: 0px;font-weight: bold;" class="w3-xlarge"><a href="tel:+385914182000"><i class="fas fa-mobile-alt"></i> 091 418 2000</a>
+          <span >
+          <a href="https://api.whatsapp.com/send?phone=+385914182000" title="WhatsApp"><i class="fab fa-whatsapp w3-margin-left w3-margin-right largetext"></i></a>
+          <a href="viber://chat?number=%2B385914182000" title="Viber"><i class="fab fa-viber w3-margin-right largetext"></i></a>
+          <a href="https://m.me/1165940456" title="Messenger"><i class="fab fa-facebook-messenger w3-margin-right largetext"></i></a>
+        </span>
+        </p>
         <!--<br><br>Slobodno nam se obratite s povjerenjem, a mi ćemo Vam uzvratiti kvalitetnom i profesionalnom uslugom.-->
     </div>
 </div>
-<!--<div style="max-width: 900px;margin-bottom:20px;margin-top: 20px;" class="w3-content">
-  <div style="text-align: center;font-size: x-large;">
-    Dubinski čistimo:
-  </div>
-  <div id="slidecontainer">
-    <div id="slide">
-      <div class="feature2">Automobile</div>
-      <div class="feature2">Garniture</div>
-      <div class="feature2">Fotelje</div>
-      <div class="feature2">Dvosjede</div>
-      <div class="feature2">Trosjede</div>
-      <div class="feature2">Stolice</div>
-      <div class="feature2">Tepihe</div>
-      <div class="feature2">Kamen</div>
-      <div class="feature2">Automobile</div>
-      <div class="feature2">Garniture</div>
-      <div class="feature2">Fotelje</div>
-      <div class="feature2">Dvosjede</div>
-      <div class="feature2">Trosjede</div>
-      <div class="feature2">Stolice</div>
-      <div class="feature2">Tepihe</div>
-      <div class="feature2">Kamen</div>
-    </div>
-  </div>
-</div>-->
-
 
 <div style="max-width: 900px;margin-bottom:20px;margin-top: 20px;" class="w3-content">
   <div style="text-align: center;font-size: x-large;">
