--- a/src/app/prices/prices.component.html
+++ b/src/app/prices/prices.component.html
@@ -7,6 +7,10 @@
       <th>Cijena</th>
     </tr>
     <tr>
+      <td>Dubinsko čišćenje svih sjedala u automobilu</td>
+      <td>50 € (376,73 kn)</td>
+    </tr>
+    <tr>
       <td>Dubinsko čišćenje automobila (sva sjedišta, pod, bunker)</td>
       <td>80 € (602,76 kn)</td>
     </tr>
