--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -13,8 +13,10 @@
         <div class="" style="width: fit-content;float: right;">
           <a class="social-icons" href="https://api.whatsapp.com/send?phone=+385914182000"><i class="fab fa-whatsapp"></i></a>
           <a class="social-icons" href="viber://chat?number=%2B385914182000"><i class="fab fa-viber"></i></a>
-          <a class="social-icons" href="https://www.facebook.com/profile.php?id=1165940456"><i class="fab fa-facebook"></i></a>
+          <a class="social-icons" href="https://m.me/1165940456" title="Messenger"><i class="fab fa-facebook-messenger"></i></a>
+          <a class="social-icons" href="https://www.tiktok.com/@markodamawashimpr"><i class="fab fa-tiktok"></i></a>
           <a class="social-icons" href="https://www.instagram.com/dubinsko_ciscenje_damawash/"><i class="fab fa-instagram"></i></a>
+          <a class="social-icons" href="https://www.facebook.com/profile.php?id=1165940456"><i class="fab fa-facebook"></i></a>
         </div>
       </div>
     
