dodano generalno ciscenje

--- a/src/app/prices/prices.component.html
+++ b/src/app/prices/prices.component.html
@@ -54,6 +54,10 @@
       <td>Klasično čišćenje apartmana, poslovnih prostora, kuća, plovila</td>
       <td>Po dogovoru</td>
     </tr>
+    <tr>
+      <td>Generalno čišćenje apartmana, poslovnih prostora, kuća, plovila</td>
+      <td>Po dogovoru</td>
+    </tr>
   </table>
   <p class="w3-center w3-padding">TEČAJ: 1 EUR = 7,53450 HRK</p>
 <h4 class="w3-center w3-padding">Za sve ostalo po dogovoru.</h4>
